--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 # MySQL config start
 #----------------------------------------------------------------
-spring.datasource.url = jdbc:mysql://localhost:3306/grabit?useUnicode=true
+spring.datasource.url = jdbc:mysql://localhost:3306/grabit?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database=MYSQL
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 #----------------------------------------------------------------
 # MySQL config end
 
