feat : edit user profile and set Courier status

--- a/frontend/.env
+++ b/frontend/.env
@@ -4,4 +4,6 @@ REACT_APP_LOGOUT_URL=$DOMAIN/users/logout
 REACT_APP_DRIVER_SIGNUP_URL=$DOMAIN/drivers/save
 REACT_APP_CUSTOMER_SIGNUP_URL=$DOMAIN/customers/save
 REACT_APP_LOGIN_URL=$DOMAIN/users/login
-REACT_APP_ORDER_CUSTOMER_SAVE_URL=$DOMAIN/orders/customer/save 
+REACT_APP_ORDER_CUSTOMER_SAVE_URL=$DOMAIN/orders/customer/save
+REACT_APP_DRIVER_SET_STATE_URL=$DOMAIN/drivers/setState
+REACT_APP_SET_USER_URL=$DOMAIN/users/update/settings
