--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "leaflet-routing-machine": "^3.2.12",
     "nominatim-browser": "^2.1.0",
     "react": "^16.13.1",
+    "react-bootstrap-toggle": "^2.3.2",
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
     "react-geocode": "^0.2.1",
