feat : change the order status

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,6 @@
+
 DOMAIN=http://localhost:8080/grabit/api
+REACT_APP_ID=583956515621470
 REACT_APP_GET_USER_URL=$DOMAIN/users/
 REACT_APP_LOGOUT_URL=$DOMAIN/users/logout
 REACT_APP_DRIVER_SIGNUP_URL=$DOMAIN/drivers/save
@@ -7,3 +9,7 @@ REACT_APP_LOGIN_URL=$DOMAIN/users/login
 REACT_APP_ORDER_CUSTOMER_SAVE_URL=$DOMAIN/orders/customer/save
 REACT_APP_DRIVER_SET_STATE_URL=$DOMAIN/drivers/setState
 REACT_APP_SET_USER_URL=$DOMAIN/users/update/settings
+REACT_APP_GET_CUSTOMER_ORDERS_URL=$DOMAIN/orders/customer
+REACT_APP_GET_DRIVER_ORDERS_URL=$DOMAIN/orders/driver
+REACT_APP_DRIVER_SET_ORDER_URL=$DOMAIN/orders/setOrderState
+
