--- a/frontend/.env
+++ b/frontend/.env
@@ -11,5 +11,6 @@ REACT_APP_DRIVER_SET_STATE_URL=$DOMAIN/drivers/setState
 REACT_APP_SET_USER_URL=$DOMAIN/users/update/settings
 REACT_APP_GET_CUSTOMER_ORDERS_URL=$DOMAIN/orders/customer
 REACT_APP_GET_DRIVER_ORDERS_URL=$DOMAIN/orders/driver
+REACT_APP_GET_ORDER_STATUS=$DOMAIN/orders/getOrderState
 REACT_APP_DRIVER_SET_ORDER_URL=$DOMAIN/orders/setOrderState
 
