feat : filter and display orders by order status

--- a/frontend/.env
+++ b/frontend/.env
@@ -13,4 +13,5 @@ REACT_APP_GET_CUSTOMER_ORDERS_URL=$DOMAIN/orders/customer
 REACT_APP_GET_DRIVER_ORDERS_URL=$DOMAIN/orders/driver
 REACT_APP_GET_ORDER_STATUS=$DOMAIN/orders/getOrderState
 REACT_APP_DRIVER_SET_ORDER_URL=$DOMAIN/orders/setOrderState
-
+REACT_APP_CUSTOMER_GET_FILTERED_ORDERS_URL=$DOMAIN/orders/customer/getOrders
+REACT_APP_DRIVER_GET_FILTERED_ORDERS_URL=$DOMAIN/orders/driver/getOrders
