--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,5 @@
 
+HOST_URL=http://localhost
 DOMAIN=http://localhost:8080/grabit/api
 REACT_APP_ID=583956515621470
 REACT_APP_GET_USER_URL=$DOMAIN/users/
@@ -15,3 +16,4 @@ REACT_APP_GET_ORDER_STATUS=$DOMAIN/orders/getOrderState
 REACT_APP_DRIVER_SET_ORDER_URL=$DOMAIN/orders/setOrderState
 REACT_APP_CUSTOMER_GET_FILTERED_ORDERS_URL=$DOMAIN/orders/customer/getOrders
 REACT_APP_DRIVER_GET_FILTERED_ORDERS_URL=$DOMAIN/orders/driver/getOrders
+REACT_APP_SOCKET_IO_URL=$HOST_URL:5000
