--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -32,7 +32,22 @@ spring.session.timeout.seconds=900
 #----------------------------------------------------------------
 # session management
 
+socketio.host=127.0.0.1
+socketio.port=5000
+socketio.maxFramePayloadLength=1048576
+socketio.maxHttpContentLength=1048576
+# Size of socket connections (e.g., listening on only one port box thread group is 1)
+socketio.bossCount=1
+socketio.workCount=100
+socketio.allowCustomRequests=true
+# Protocol upgrade timeout (milliseconds), default 10 seconds.HTTP handshake upgrade to ws protocol timeout
+socketio.upgradeTimeout=1000000
+# Ping message timeout (milliseconds), default 60 seconds, within which a timeout event is sent if no heartbeat message is received
+socketio.pingTimeout=6000000
+# Ping message interval (milliseconds), default 25 seconds.Client sends a heartbeat message interval to server
+socketio.pingInterval=25000
 
 
 
-
+webservice.host=http://localhost
+webservice.port=3000
