--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-facebook-login": "^4.1.1",
     "react-geocode": "^0.2.1",
     "react-leaflet": "^2.7.0",
+    "react-notifications": "^1.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.2",
     "socket.io-client": "^2.3.0"
