fix : refresh orders list on drivers rejection

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -32,6 +32,10 @@ spring.session.timeout.seconds=900
 #----------------------------------------------------------------
 # session management
 
+
+# websockets properties
+#----------------------------------------------------------------
+
 socketio.host=127.0.0.1
 socketio.port=5000
 socketio.maxFramePayloadLength=1048576
@@ -51,3 +55,17 @@ socketio.pingInterval=25000
 
 webservice.host=http://localhost
 webservice.port=3000
+
+#----------------------------------------------------------------
+# websockets properties
+
+# socket events and messages
+#----------------------------------------------------------------
+
+event.new_order=NEW_ORDER
+message.new_order=a new order has been assigned to you
+event.rejected_order=REJECTED_ORDER
+message.rejected_order=you rejected to deliver an order
+
+#----------------------------------------------------------------
+# socket events
