--- a/frontend/.env
+++ b/frontend/.env
@@ -9,6 +9,7 @@ REACT_APP_CUSTOMER_SIGNUP_URL=$DOMAIN/customers/save
 REACT_APP_LOGIN_URL=$DOMAIN/users/login
 REACT_APP_ORDER_CUSTOMER_SAVE_URL=$DOMAIN/orders/customer/save
 REACT_APP_DRIVER_SET_STATE_URL=$DOMAIN/drivers/setState
+REACT_APP_DRIVER_GET_STATE_URL=$DOMAIN/drivers/getState
 REACT_APP_SET_USER_URL=$DOMAIN/users/update/settings
 REACT_APP_GET_CUSTOMER_ORDERS_URL=$DOMAIN/orders/customer
 REACT_APP_GET_DRIVER_ORDERS_URL=$DOMAIN/orders/driver
