--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-notifications": "^1.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.2",
+    "react-super-responsive-table": "^5.1.3",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
