--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "leaflet": "^1.6.0",
     "leaflet-geosearch": "^3.0.6",
     "leaflet-routing-machine": "^3.2.12",
+    "netlify-cli": "^2.65.5",
     "nominatim-browser": "^2.1.0",
     "react": "^16.13.1",
     "react-bootstrap-toggle": "^2.3.2",
