tests : unit tests + integration tests

--- a/frontend/.env
+++ b/frontend/.env
@@ -19,3 +19,4 @@ REACT_APP_CUSTOMER_GET_FILTERED_ORDERS_URL=$DOMAIN/orders/customer/getOrders
 REACT_APP_DRIVER_GET_FILTERED_ORDERS_URL=$DOMAIN/orders/driver/getOrders
 REACT_APP_GET_ORDER_ITEMS_URL=$DOMAIN/items/getByOrders
 REACT_APP_SOCKET_IO_URL=$HOST_URL:5000
+SKIP_PREFLIGHT_CHECK=true
