--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/enzyme": "^3.10.8",
+    "@types/jest": "^26.0.15",
     "leaflet": "^1.6.0",
     "leaflet-geosearch": "^3.0.6",
     "leaflet-routing-machine": "^3.2.12",
@@ -31,7 +33,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --verbose --silent Test.spec.js",
+    "testCoverage": "jest --verbose --silent --coverage Test.spec.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -48,5 +51,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "jest": "^24.9.0",
+    "react-test-renderer": "^17.0.1"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "<rootDir>/enzymeSetup.js"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|ico|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/fileMock.js"
+    }
   }
 }
